Fix unwanted round corners for page number buttons and align static controls to the left
ERM39064

[REL1_39, REL1_39-2.1.x, REL1_43]

--- a/resources/stylesheet/data/paginator.less
+++ b/resources/stylesheet/data/paginator.less
@@ -10,10 +10,7 @@
 		flex:auto;
 	}
 	.static-controls {
-		flex: auto;
 		text-align: right;
-		top: 7px;
-		right: 20px;
 		.oo-ui-labelWidget {
 			&.row-count {
 				border: 1px solid #939393;
